--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-navigation": "^3.0.8"
+    "react-navigation": "^3.0.8",
+    "react-navigation-fluid-transitions": "^0.2.74"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
