--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-reanimated": "~1.2.0",
     "react-navigation": "^3.0.8",
     "react-navigation-fluid-transitions": "^0.2.74"
   },
