--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-navigation-fluid-transitions": "^0.2.74"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^7.0.0",
+    "typescript": "^3.7.2"
   },
   "private": true
 }
