--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-linear-gradient": "~7.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-navigation": "^3.0.8",
     "react-navigation-fluid-transitions": "^0.2.74"
