--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^36.0.0",
-    "expo-linear-gradient": "~8.0.0",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
+    "expo": "^40.0.0",
+    "expo-linear-gradient": "~8.4.0",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
     "react-navigation": "^3.0.8",
     "react-navigation-fluid-transitions": "^0.2.74"
   },
   "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
-    "babel-preset-expo": "^7.0.0",
-    "typescript": "^3.7.2"
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "babel-preset-expo": "8.3.0",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
