update to expo 44

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "noEmit": true,
-    "lib": [
-      "dom",
-      "esnext"
-    ],
-    "jsx": "react-native",
-    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
-  }
+    "jsx": "react-native",
+    "lib": ["esnext", "dom"],
+    "moduleResolution": "node",
+    "noEmit": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "downlevelIteration": true,
+  },
+  "extends": "expo/tsconfig.base"
 }
