--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,6 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
-    "lib": ["esnext", "dom"],
-    "moduleResolution": "node",
-    "noEmit": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "strict": true,
-    "downlevelIteration": true,
-  },
-  "extends": "expo/tsconfig.base"
+    "strict": true
+  }
 }
