--- a/package.json
+++ b/package.json
@@ -4,38 +4,30 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
-    "expo-font": "~10.0.4",
-    "expo-linear-gradient": "~11.0.0",
-    "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-web-browser": "~10.1.0",
+    "expo": "~43.0.2",
+    "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-gesture-handler": "~2.1.0"
+    "expo-linear-gradient": "~10.0.3",
+    "react-native-screens": "~3.8.0",
+    "@react-navigation/core": "*",
+    "@react-navigation/stack": "5.10.0",
+    "react-native-reanimated": "~2.2.0",
+    "@react-navigation/native": "5.0.8",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-safe-area-context": "3.3.2",
+    "@react-native-community/masked-view": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
-    "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
   "private": true
